--- a/iris/iris_new.ipynb
+++ b/iris/iris_new.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9d4bd0bd",
+   "metadata": {},
+   "source": [
+    "Name:Asmit Sahu \n",
+    "Roll: 23052231\n",
+    "working with iris dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "e9f64552",
    "metadata": {},
    "outputs": [],
@@ -15,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d2f7dc70",
    "metadata": {},
    "outputs": [
@@ -27,108 +37,88 @@
       "Target names: ['setosa' 'versicolor' 'virginica']\n",
       "\n",
       "First 100 samples:\n",
-      "\n",
-      "Sample 1: [5.1 3.5 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 2: [4.9 3.  1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 3: [4.7 3.2 1.3 0.2] (class: 0, species: setosa)\n",
-      "Sample 4: [4.6 3.1 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 5: [5.  3.6 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 6: [5.4 3.9 1.7 0.4] (class: 0, species: setosa)\n",
-      "Sample 7: [4.6 3.4 1.4 0.3] (class: 0, species: setosa)\n",
-      "Sample 8: [5.  3.4 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 9: [4.4 2.9 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 10: [4.9 3.1 1.5 0.1] (class: 0, species: setosa)\n",
-      "Sample 11: [5.4 3.7 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 12: [4.8 3.4 1.6 0.2] (class: 0, species: setosa)\n",
-      "Sample 13: [4.8 3.  1.4 0.1] (class: 0, species: setosa)\n",
-      "Sample 14: [4.3 3.  1.1 0.1] (class: 0, species: setosa)\n",
-      "Sample 15: [5.8 4.  1.2 0.2] (class: 0, species: setosa)\n",
-      "Sample 16: [5.7 4.4 1.5 0.4] (class: 0, species: setosa)\n",
-      "Sample 17: [5.4 3.9 1.3 0.4] (class: 0, species: setosa)\n",
-      "Sample 18: [5.1 3.5 1.4 0.3] (class: 0, species: setosa)\n",
-      "Sample 19: [5.7 3.8 1.7 0.3] (class: 0, species: setosa)\n",
-      "Sample 20: [5.1 3.8 1.5 0.3] (class: 0, species: setosa)\n",
-      "Sample 21: [5.4 3.4 1.7 0.2] (class: 0, species: setosa)\n",
-      "Sample 22: [5.1 3.7 1.5 0.4] (class: 0, species: setosa)\n",
-      "Sample 23: [4.6 3.6 1.  0.2] (class: 0, species: setosa)\n",
-      "Sample 24: [5.1 3.3 1.7 0.5] (class: 0, species: setosa)\n",
-      "Sample 25: [4.8 3.4 1.9 0.2] (class: 0, species: setosa)\n",
-      "Sample 26: [5.  3.  1.6 0.2] (class: 0, species: setosa)\n",
-      "Sample 27: [5.  3.4 1.6 0.4] (class: 0, species: setosa)\n",
-      "Sample 28: [5.2 3.5 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 29: [5.2 3.4 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 30: [4.7 3.2 1.6 0.2] (class: 0, species: setosa)\n",
-      "Sample 31: [4.8 3.1 1.6 0.2] (class: 0, species: setosa)\n",
-      "Sample 32: [5.4 3.4 1.5 0.4] (class: 0, species: setosa)\n",
-      "Sample 33: [5.2 4.1 1.5 0.1] (class: 0, species: setosa)\n",
-      "Sample 34: [5.5 4.2 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 35: [4.9 3.1 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 36: [5.  3.2 1.2 0.2] (class: 0, species: setosa)\n",
-      "Sample 37: [5.5 3.5 1.3 0.2] (class: 0, species: setosa)\n",
-      "Sample 38: [4.9 3.6 1.4 0.1] (class: 0, species: setosa)\n",
-      "Sample 39: [4.4 3.  1.3 0.2] (class: 0, species: setosa)\n",
-      "Sample 40: [5.1 3.4 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 41: [5.  3.5 1.3 0.3] (class: 0, species: setosa)\n",
-      "Sample 42: [4.5 2.3 1.3 0.3] (class: 0, species: setosa)\n",
-      "Sample 43: [4.4 3.2 1.3 0.2] (class: 0, species: setosa)\n",
-      "Sample 44: [5.  3.5 1.6 0.6] (class: 0, species: setosa)\n",
-      "Sample 45: [5.1 3.8 1.9 0.4] (class: 0, species: setosa)\n",
-      "Sample 46: [4.8 3.  1.4 0.3] (class: 0, species: setosa)\n",
-      "Sample 47: [5.1 3.8 1.6 0.2] (class: 0, species: setosa)\n",
-      "Sample 48: [4.6 3.2 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 49: [5.3 3.7 1.5 0.2] (class: 0, species: setosa)\n",
-      "Sample 50: [5.  3.3 1.4 0.2] (class: 0, species: setosa)\n",
-      "Sample 51: [7.  3.2 4.7 1.4] (class: 1, species: versicolor)\n",
-      "Sample 52: [6.4 3.2 4.5 1.5] (class: 1, species: versicolor)\n",
-      "Sample 53: [6.9 3.1 4.9 1.5] (class: 1, species: versicolor)\n",
-      "Sample 54: [5.5 2.3 4.  1.3] (class: 1, species: versicolor)\n",
-      "Sample 55: [6.5 2.8 4.6 1.5] (class: 1, species: versicolor)\n",
-      "Sample 56: [5.7 2.8 4.5 1.3] (class: 1, species: versicolor)\n",
-      "Sample 57: [6.3 3.3 4.7 1.6] (class: 1, species: versicolor)\n",
-      "Sample 58: [4.9 2.4 3.3 1. ] (class: 1, species: versicolor)\n",
-      "Sample 59: [6.6 2.9 4.6 1.3] (class: 1, species: versicolor)\n",
-      "Sample 60: [5.2 2.7 3.9 1.4] (class: 1, species: versicolor)\n",
-      "Sample 61: [5.  2.  3.5 1. ] (class: 1, species: versicolor)\n",
-      "Sample 62: [5.9 3.  4.2 1.5] (class: 1, species: versicolor)\n",
-      "Sample 63: [6.  2.2 4.  1. ] (class: 1, species: versicolor)\n",
-      "Sample 64: [6.1 2.9 4.7 1.4] (class: 1, species: versicolor)\n",
-      "Sample 65: [5.6 2.9 3.6 1.3] (class: 1, species: versicolor)\n",
-      "Sample 66: [6.7 3.1 4.4 1.4] (class: 1, species: versicolor)\n",
-      "Sample 67: [5.6 3.  4.5 1.5] (class: 1, species: versicolor)\n",
-      "Sample 68: [5.8 2.7 4.1 1. ] (class: 1, species: versicolor)\n",
-      "Sample 69: [6.2 2.2 4.5 1.5] (class: 1, species: versicolor)\n",
-      "Sample 70: [5.6 2.5 3.9 1.1] (class: 1, species: versicolor)\n",
-      "Sample 71: [5.9 3.2 4.8 1.8] (class: 1, species: versicolor)\n",
-      "Sample 72: [6.1 2.8 4.  1.3] (class: 1, species: versicolor)\n",
-      "Sample 73: [6.3 2.5 4.9 1.5] (class: 1, species: versicolor)\n",
-      "Sample 74: [6.1 2.8 4.7 1.2] (class: 1, species: versicolor)\n",
-      "Sample 75: [6.4 2.9 4.3 1.3] (class: 1, species: versicolor)\n",
-      "Sample 76: [6.6 3.  4.4 1.4] (class: 1, species: versicolor)\n",
-      "Sample 77: [6.8 2.8 4.8 1.4] (class: 1, species: versicolor)\n",
-      "Sample 78: [6.7 3.  5.  1.7] (class: 1, species: versicolor)\n",
-      "Sample 79: [6.  2.9 4.5 1.5] (class: 1, species: versicolor)\n",
-      "Sample 80: [5.7 2.6 3.5 1. ] (class: 1, species: versicolor)\n",
-      "Sample 81: [5.5 2.4 3.8 1.1] (class: 1, species: versicolor)\n",
-      "Sample 82: [5.5 2.4 3.7 1. ] (class: 1, species: versicolor)\n",
-      "Sample 83: [5.8 2.7 3.9 1.2] (class: 1, species: versicolor)\n",
-      "Sample 84: [6.  2.7 5.1 1.6] (class: 1, species: versicolor)\n",
-      "Sample 85: [5.4 3.  4.5 1.5] (class: 1, species: versicolor)\n",
-      "Sample 86: [6.  3.4 4.5 1.6] (class: 1, species: versicolor)\n",
-      "Sample 87: [6.7 3.1 4.7 1.5] (class: 1, species: versicolor)\n",
-      "Sample 88: [6.3 2.3 4.4 1.3] (class: 1, species: versicolor)\n",
-      "Sample 89: [5.6 3.  4.1 1.3] (class: 1, species: versicolor)\n",
-      "Sample 90: [5.5 2.5 4.  1.3] (class: 1, species: versicolor)\n",
-      "Sample 91: [5.5 2.6 4.4 1.2] (class: 1, species: versicolor)\n",
-      "Sample 92: [6.1 3.  4.6 1.4] (class: 1, species: versicolor)\n",
-      "Sample 93: [5.8 2.6 4.  1.2] (class: 1, species: versicolor)\n",
-      "Sample 94: [5.  2.3 3.3 1. ] (class: 1, species: versicolor)\n",
-      "Sample 95: [5.6 2.7 4.2 1.3] (class: 1, species: versicolor)\n",
-      "Sample 96: [5.7 3.  4.2 1.2] (class: 1, species: versicolor)\n",
-      "Sample 97: [5.7 2.9 4.2 1.3] (class: 1, species: versicolor)\n",
-      "Sample 98: [6.2 2.9 4.3 1.3] (class: 1, species: versicolor)\n",
-      "Sample 99: [5.1 2.5 3.  1.1] (class: 1, species: versicolor)\n",
-      "Sample 100: [5.7 2.8 4.1 1.3] (class: 1, species: versicolor)\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                5.1               3.5                1.4               0.2\n",
+       "1                4.9               3.0                1.4               0.2\n",
+       "2                4.7               3.2                1.3               0.2\n",
+       "3                4.6               3.1                1.5               0.2\n",
+       "4                5.0               3.6                1.4               0.2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,13 +130,16 @@
     "print(\"Target names:\", iris.target_names)\n",
     "print(\"\\nFirst 100 samples:\\n\")\n",
     "\n",
-    "for i in range(100):\n",
-    "    print(f\"Sample {i+1}: {X[i]} (class: {y[i]}, species: {iris.target_names[y[i]]})\")\n"
+    "'''for i in range(100):\n",
+    "    print(f\"Sample {i+1}: {X[i]} (class: {y[i]}, species: {iris.target_names[y[i]]})\")'''\n",
+    "\n",
+    "df = pd.DataFrame(X, columns=iris.feature_names)\n",
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "eefee08a",
    "metadata": {},
    "outputs": [
@@ -227,90 +220,27 @@
        "      <td>0.2</td>\n",
        "      <td>setosa</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>virginica</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>150 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                  5.1               3.5                1.4               0.2   \n",
-       "1                  4.9               3.0                1.4               0.2   \n",
-       "2                  4.7               3.2                1.3               0.2   \n",
-       "3                  4.6               3.1                1.5               0.2   \n",
-       "4                  5.0               3.6                1.4               0.2   \n",
-       "..                 ...               ...                ...               ...   \n",
-       "145                6.7               3.0                5.2               2.3   \n",
-       "146                6.3               2.5                5.0               1.9   \n",
-       "147                6.5               3.0                5.2               2.0   \n",
-       "148                6.2               3.4                5.4               2.3   \n",
-       "149                5.9               3.0                5.1               1.8   \n",
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "0                5.1               3.5                1.4               0.2   \n",
+       "1                4.9               3.0                1.4               0.2   \n",
+       "2                4.7               3.2                1.3               0.2   \n",
+       "3                4.6               3.1                1.5               0.2   \n",
+       "4                5.0               3.6                1.4               0.2   \n",
        "\n",
-       "       species  \n",
-       "0       setosa  \n",
-       "1       setosa  \n",
-       "2       setosa  \n",
-       "3       setosa  \n",
-       "4       setosa  \n",
-       "..         ...  \n",
-       "145  virginica  \n",
-       "146  virginica  \n",
-       "147  virginica  \n",
-       "148  virginica  \n",
-       "149  virginica  \n",
-       "\n",
-       "[150 rows x 5 columns]"
+       "  species  \n",
+       "0  setosa  \n",
+       "1  setosa  \n",
+       "2  setosa  \n",
+       "3  setosa  \n",
+       "4  setosa  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +251,7 @@
     "\n",
     "print(\"\\nDataFrame Head:\")\n",
     "#print(df.head())\n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -428,14 +358,6 @@
     "plt.title(\"Correlation Heatmap\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b2ef4b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
